<resources>
    <string name="app_name">IMusic</string>
    <string name="music_in_the_hearth">Rymz Entertaiment</string>
    <string name="alternative_rock">Alternative Rock</string>
    <string name="ambient">Ambient</string>
    <string name="classical">Classical</string>
    <string name="country">Country</string>
    <string name="dot">&#8226;</string>
    <string name="more">&#8230;</string>
    <string name="network_is_unavailable">Network is unavailable</string>
    <string name="Please_press_Back_again_to_exit">Please press Back again to exit</string>
    <string name="granted">Granted</string>
    <string name="no_granted">No Granted</string>
    <string name="add_to_the_download_list">has been added to the download list</string>
    <string name="search">Search Tracks</string>
    <string name="null_cha"/>
    <string name="title_detail">User Detail</string>
    <string name="title_genre">Đăng nhập</string>
    <string name="title_actor">Đăng kí</string>
    <string name="title_logout">Đăng xuất </string>
    <string name="title_favorite">Yêu thích</string>
    <string name="title_infor">Thông tin tài khoản</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="link1">https://photo-zmp3.zadn.vn/covers/f/7/f766f301706abd51957040cf1dedeaad_1510648555.jpg</string>
    <string name="link2">https://photo-zmp3.zadn.vn/covers/2/a/2ac9d9aa479519e1724db5b860373578_1499827968.jpg</string>
    <string name="link3">https://photo-zmp3.zadn.vn/covers/d/0/d0f7e500d9a338062095f7f66ed669ff_1516330401.jpg</string>
    <string name="link4">https://photo-zmp3.zadn.vn/covers/d/2/d28ef98a1827d390296f2759555cc606_1499827932.jpg</string>
    <string name="link5">https://avatar-nct.nixcdn.com/topic/mobile/2018/11/19/c/0/6/c/1542615547976_org.jpg</string>
    <string name="text_notification_playing">text_notification_playing</string>
</resources>
