<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/linear_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager_slider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_160"
                />
            <LinearLayout
                android:id="@+id/linear_dot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="horizontal"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_17"
            android:orientation="horizontal"
            >
            <View
                android:layout_width="@dimen/dp_4"
                android:layout_height="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/colorAccent"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alternative_rock"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold"
                />

        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_alternative_rock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/colorGray"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_17"
            android:orientation="horizontal"
            >
            <View
                android:layout_width="@dimen/dp_4"
                android:layout_height="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/colorAccent"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ambient"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold"
                />
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_ambient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/colorGray"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_17"
            android:orientation="horizontal"
            >
            <View
                android:layout_width="@dimen/dp_4"
                android:layout_height="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/colorAccent"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/classical"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold"
                />
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_classical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/colorGray"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_17"
            android:orientation="horizontal"
            >
            <View
                android:layout_width="@dimen/dp_4"
                android:layout_height="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/colorAccent"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/country"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold"
                />
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
